# imaging_core

./: CMakeLists.txt  README.md
cmake/: CMakeCopyIfDifferent.cmake  CMakePythonAddCudaModule.cmake
data/: CMakeLists.txt  irregular_uv_data.cu  irregular_uv_data.hpp  regular_uv_cube.cu  regular_uv_cube.hpp
resamplers/: CMakeLists.txt  bda_resampler.cpp  bda_resampler.cu  bda_resampler.hpp  gpu_helpers.h  gridder.cpp  gridder.hpp  uv_data.cpp  uv_data.cu  uv_data.hpp
resamplers/bda_traits_policies/: correlation_gridding_policy.hpp  correlation_gridding_trait.hpp
tests/: CMakeLists.txt  test_import.py  test_import_uv_cube.py  test_import_uv_data.py
